fixing scrollbar on mobile

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -46,3 +46,8 @@
 .fas, .far, .fab {
 	@extend .fa;
 }
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  display: none !important;
+}
