--- a/app/assets/stylesheets/mobile/app.scss
+++ b/app/assets/stylesheets/mobile/app.scss
@@ -1,9 +1,2 @@
-body[data-mobile-app='1'], html[data-mobile-app='1'] {
-	&::-webkit-scrollbar {
-		display: none;
-	}
-
-	*::-webkit-scrollbar {
-		display: none;
-	}
+body[data-mobile-app='1'] {
 }
